src/objects/AppClient__c.object
<CustomObject>
    <fields>
        <fullName>AppUser__c</fullName>
        <label>App User</label>
        <referenceTo>AppUser__c</referenceTo>
        <relationshipLabel>App Clients</relationshipLabel>
        <relationshipName>AppClients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <formula>IF( CONTAINS(UserAgent__c, &apos;iPhone&apos;)  , &apos;iPhone&apos;, 
 IF( CONTAINS(UserAgent__c, &apos;iPad&apos;)  , &apos;iPad&apos;, 
 IF( CONTAINS(UserAgent__c, &apos;Android&apos;)  , &apos;Android&apos;, 
 IF( CONTAINS(UserAgent__c, &apos;PlayBook&apos;)  , &apos;PlayBook&apos;, &apos;Other&apos;))))</formula>
        <label>Device</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Encryption_Key__c</fullName>
        <label>Encryption Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Failure Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HasPasscode__c</fullName>
        <formula>IF(ISBLANK( Encryption_Key__c ), &apos;No&apos;, &apos;Yes&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Passcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationID__c</fullName>
        <label>Organization ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_ID__c</fullName>
        <externalId>true</externalId>
        <label>Token ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserAgent__c</fullName>
        <label>User Agent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <externalId>true</externalId>
        <label>User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>App Client</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AppUser__c</columns>
        <columns>Device__c</columns>
        <columns>HasPasscode__c</columns>
        <columns>Last_Login__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>App Client Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Clients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>